# fastapi-sveltekit-templage

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env  database.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
